--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <p>
             В проекте мы решили совместить удобство и скорость поиска новых знакомств через интернет, и душевность живых встреч. 
         </p>
-        <p>Что можно узнать о человеке из интернета? Только то, что он сам захочет рассказать о себе, не сложно прикрепить фото под тонной фотошопа или написать в анкете какой ты «сильный, смелый, умелый». При оффлайн встрече в силу вступают не только внешность и анкетные данные, но и язык жестов, запах, природная харизма или занудство, симпатия или антипатия.
+        <p>Что можно узнать о человеке из интернета? Только то, что он сам захочет рассказать о себе, несложно прикрепить фото под тонной фотошопа или написать в анкете какой ты «сильный, смелый, умелый». При оффлайн встрече в силу вступают не только внешность и анкетные данные, но и язык жестов, запах, природная харизма или занудство, симпатия или антипатия.
         </p>
-        <p>Наше веб приложение будет соединять людей в онлайн комнате (англ. "your and my room") , давать возможность немного познакомиться и освоиться в новой компании, договориться о "живой" встрече, а после - будет возможность оценить других участников и место проведения встречи.
+        <p>Наше веб приложение будет соединять людей в онлайн комнате (англ. "your and my room"), давать возможность немного познакомиться и освоиться в новой компании, договориться о "живой" встрече, а после - будет возможность оценить других участников и место проведения встречи.
         </p>
     </section>
     <hr>
@@ -53,7 +53,7 @@
     <hr>
     <section>
         <h2>Команда</h2>
-        <p>Команда состоит из четырех групп специалистов: маркетологов, системных аналитиков, дизайнеров, разработчиков - и одного менеджера, в каждой группе специалистов есть ведущий, который отвечает за работу группы.</p>
+        <p>Команда состоит из четырех групп специалистов: маркетологи, системные аналитики, дизайнеры, разработчики - и одного менеджера, в каждой группе специалистов есть ведущий, который отвечает за работу группы.</p>
         <a href="https://t.me/+yiIyxWlXoqU4OGYy" target="_blank">Ссылка на чат команды в телеграме.</a>
     </section>
     <br>
