New artifacts adding

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
             <li>
                 <a href="https://docs.google.com/spreadsheets/d/1Xep2FR7PxN0VQlbfpnlAVu1mKQ12r2dBHWlghq1HpKU/edit?usp=sharing" target="_blank">Спецификация</a>
             </li>
+            <li>
+                <a href="https://docs.google.com/document/d/1DziWOM9bwWZqjkyvinM6rODq1NliylO-89KyOy-kZi4/edit?usp=sharing" target="_blank">Системные требования</a>
+            </li>
+            <li>MVP</li>
+            <li>Бриф</li>
+            <li>Пользовательские требования</li>
         </ol>
     </section>
     <hr>
